[project]
name = "oak"
version = "0.1.0"
description = "A simple scripting language interpreter"
authors = [{ name = "Adolfo Moyano", email = "admodevcodes@outlook.com" }]
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
dependencies = [
    "click",
    "pytest",
]

[project.scripts]
oak = "oak.cli:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["oak*"]
exclude = ["assets*"]

